[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/background/leaderboard bg.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons or icons/sound off icon.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/sound on icon.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=4]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/tower/trophy.png" type="Texture" id=6]
[ext_resource path="res://sprites/buttons or icons/home icon.png" type="Texture" id=7]
[ext_resource path="res://Game Play/Leaderboard/LeaderboardPage.gd" type="Script" id=8]
[ext_resource path="res://Game Play/Leaderboard/LeaderboardDetails.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[node name="LeaderboardPage" type="CanvasLayer"]
script = ExtResource( 8 )
Details = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 13.8284
margin_right = 120.0
margin_bottom = 93.8284
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="."]
margin_left = 1787.72
margin_top = 13.8284
margin_right = 1908.72
margin_bottom = 107.828
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteButton" type="TextureButton" parent="."]
margin_left = 1779.0
margin_top = 6.0
margin_right = 1923.0
margin_bottom = 114.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="TextureButton" parent="."]
margin_left = 656.0
margin_top = 32.0
margin_right = 816.0
margin_bottom = 168.0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrophyIcon" type="TextureRect" parent="."]
margin_left = 1120.0
margin_top = 19.0
margin_right = 1272.0
margin_bottom = 171.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerHomePageLabel" type="Label" parent="."]
margin_left = 576.0
margin_top = 176.0
margin_right = 920.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 1 )
text = "Tower's 
Home Page"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerNameLabel" type="Label" parent="."]
margin_left = 1008.0
margin_top = 171.0
margin_right = 1376.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadingsLabel" type="Label" parent="."]
margin_left = 232.0
margin_top = 266.0
margin_right = 1732.0
margin_bottom = 315.0
custom_fonts/font = SubResource( 3 )
text = "Rank        Name              Level        No. of Correct        Total Time Taken"
align = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 232.0
margin_top = 336.0
margin_right = 1696.0
margin_bottom = 1048.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 100

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="pressed" from="HomeButton" to="." method="_on_HomeButton_pressed"]
